Add contribution calculation

--- a/08_RegressionAnalysis.ipynb
+++ b/08_RegressionAnalysis.ipynb
@@ -22,21 +22,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# DEP = 'IAH'\n",
-    "# ARR = 'BOS'\n",
-    "# Year = 2013\n",
-    "# PostMNL = PreProcessMNL(DEP, ARR, Year)\n",
-    "# modelset= PostMNL.GetMNL_Data()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -86,8 +71,8 @@
       "Dep. Variable:                      CHOICE   No. Observations:                1,664\n",
       "Model:             Multinomial Logit Model   Df Residuals:                    1,636\n",
       "Method:                                MLE   Df Model:                           28\n",
-      "Date:                     Mon, 20 Mar 2017   Pseudo R-squ.:                   0.333\n",
-      "Time:                             15:03:58   Pseudo R-bar-squ.:               0.323\n",
+      "Date:                     Wed, 19 Jul 2017   Pseudo R-squ.:                   0.333\n",
+      "Time:                             11:40:05   Pseudo R-bar-squ.:               0.323\n",
       "converged:                            True   Log-Likelihood:             -1,989.156\n",
       "                                             LL-Null:                    -2,981.488\n",
       "====================================================================================\n",
@@ -237,8 +222,8 @@
       "Dep. Variable:     np.log(Efficiency)   R-squared:                       0.707\n",
       "Model:                            OLS   Adj. R-squared:                  0.705\n",
       "Method:                 Least Squares   F-statistic:                     399.1\n",
-      "Date:                Mon, 20 Mar 2017   Prob (F-statistic):               0.00\n",
-      "Time:                        15:04:14   Log-Likelihood:                 104.44\n",
+      "Date:                Wed, 19 Jul 2017   Prob (F-statistic):               0.00\n",
+      "Time:                        11:40:08   Log-Likelihood:                 104.44\n",
       "No. Observations:                1664   AIC:                            -186.9\n",
       "Df Residuals:                    1653   BIC:                            -127.3\n",
       "Df Model:                          10                                         \n",
@@ -273,6 +258,167 @@
     "fo1 = 'np.log(Efficiency) ~ TS_mean + C(ClustID) + C(Season) + MIT_Str_mean'\n",
     "mod1 = IAH_BOS.fitModel(fo1)\n",
     "print mod1.summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Contribution of Causal Factors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def Factor_Contribution_Predictor(MNL_Model, OLS_Class, Factor, y_transform = 'log'):\n",
+    "    \"\"\"\n",
+    "    MNL_Model is a Class of model for Multinomial logit model (after fit)\n",
+    "    OLS_Class is a Class of model for linear regression model (after fit)\n",
+    "    \n",
+    "    Factor is a string that can be:\n",
+    "        convection: contribution of convective weather\n",
+    "        wind: contribution of wind\n",
+    "        MIT: contribution of MIT\n",
+    "        all: counfounding contribution of MIT, wind and convective weather\n",
+    "    y_transform is the tranformation function that is used in the linear regression. \n",
+    "    If we use log tranformation of y, then it should be 'log'; if no tranformation is used, then it should be 'linear'.\n",
+    "    Note that other transformations, such as expotential or power transformation, are not supported now. \n",
+    "    But they can be easily incorporated, please contact the code provider if you meet that issue.\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    # Construct a counter factual on MNL data\n",
+    "    MNL_DATA = MNL_Model.data.copy()\n",
+    "    MNL_DATA_No_Wx = MNL_Model.data.copy()\n",
+    "    Mod2rslt = OLS_Class.LR_Data1.ix[:,['FID_Member','Efficiency','OD_Clust','ClustID']]\n",
+    "    LR_No_Factor = OLS_Class.LR_Data1.copy()\n",
+    "    \n",
+    "    \n",
+    "    if Factor == 'convection':\n",
+    "        MNL_DATA_No_Wx.ix[:,2:18] = 0\n",
+    "        LR_No_Factor.ix[:,7:23] = 0\n",
+    "    elif Factor == 'wind':\n",
+    "        MNL_DATA_No_Wx['Std_Wind_Dist'] = MNL_DATA_No_Wx['GC_Dist'] / 1000.\n",
+    "    elif Factor == 'MIT':\n",
+    "        MNL_DATA_No_Wx['MIT_Str'] = 0\n",
+    "        LR_No_Factor['MIT_Str'] = 0\n",
+    "    elif Factor == 'all':\n",
+    "        MNL_DATA_No_Wx.ix[:,2:18] = 0\n",
+    "        MNL_DATA_No_Wx['MIT_Str'] = 0\n",
+    "        MNL_DATA_No_Wx.ix[:,'Std_Wind_Dist'] = MNL_DATA_No_Wx.ix[:,'GC_Dist'] / 1000. \n",
+    "\n",
+    "        LR_No_Factor.ix[:,7:23] = 0\n",
+    "        LR_No_Factor['MIT_Str'] = 0\n",
+    "    else:\n",
+    "        raise ValueError('Factor can only be convection, wind, MIT or all')\n",
+    "    \n",
+    "    # Predicting the route choice prbability using MNL model\n",
+    "    MNL_DATA['Prob_With_Factor'] = MNL_Model.predict(MNL_DATA)\n",
+    "    MNL_DATA['Prob_No_Factor'] = MNL_Model.predict(MNL_DATA_No_Wx)\n",
+    "    \n",
+    "    MNL_Pred = MNL_DATA.groupby(['FID_x','Alt_id'])[['Prob_With_Factor','Prob_No_Factor']].mean().reset_index()\n",
+    "    MNL_Pred.loc[MNL_Pred.FID_x == 99999999,'Alt_id'] = -1\n",
+    "    MNL_Pred['OD_ClustID'] = LR_No_Factor.loc[0, 'OD'] + '_' + MNL_Pred.Alt_id.map(str)\n",
+    "\n",
+    "    # Prediction using OLS\n",
+    "    if y_transform == 'log':\n",
+    "        Mod2rslt['Pred_With_Factor'] = np.exp(OLS_Class.mod.predict(exog = OLS_Class.LR_Data1))\n",
+    "        Mod2rslt['Pred_No_Factor'] = np.exp(OLS_Class.mod.predict(exog = LR_No_Factor))\n",
+    "    elif y_tranform == 'linear':\n",
+    "        Mod2rslt['Pred_With_Factor'] = OLS_Class.mod.predict(exog = OLS_Class.LR_Data1)\n",
+    "        Mod2rslt['Pred_No_Factor'] = OLS_Class.mod.predict(exog = LR_No_Factor)\n",
+    "    else:\n",
+    "        raise('Please refer to source code to adapt y transform function')\n",
+    "    Mod2rslt = Mod2rslt.merge(MNL_Pred, left_on='OD_Clust', right_on='OD_ClustID', how='left')\n",
+    "    Mod2rslt['Pred_Factor_weight'] = Mod2rslt.Pred_With_Factor * Mod2rslt.Prob_With_Factor\n",
+    "    Mod2rslt['Pred_No_Factor_weight'] = Mod2rslt.Pred_No_Factor * Mod2rslt.Prob_No_Factor\n",
+    "\n",
+    "    FactorContribution = Mod2rslt.groupby(['OD_Clust'])[['Pred_Factor_weight','Pred_No_Factor_weight']].mean().reset_index()\n",
+    "    Avg_Ineff = np.array(FactorContribution[['Pred_Factor_weight','Pred_No_Factor_weight']].sum())\n",
+    "    contribution = (Avg_Ineff[0] - Avg_Ineff[1])/Avg_Ineff[1]\n",
+    "    print('Contribution of %s is %.4f%%'%(Factor, contribution*100))\n",
+    "    \n",
+    "    return MNL_Pred[['OD_ClustID','Prob_With_Factor','Prob_No_Factor']], Mod2rslt, FactorContribution, Avg_Ineff"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Contribution of convection is 6.8784%\n"
+     ]
+    }
+   ],
+   "source": [
+    "output = Factor_Contribution_Predictor(MNL_Model, IAH_BOS, 'convection')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Contribution of MIT is 0.0000%\n"
+     ]
+    }
+   ],
+   "source": [
+    "output = Factor_Contribution_Predictor(MNL_Model, IAH_BOS, 'MIT')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Contribution of wind is 5.0064%\n"
+     ]
+    }
+   ],
+   "source": [
+    "output = Factor_Contribution_Predictor(MNL_Model, IAH_BOS, 'wind')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Contribution of all is 11.2460%\n"
+     ]
+    }
+   ],
+   "source": [
+    "output = Factor_Contribution_Predictor(MNL_Model, IAH_BOS, 'all')"
    ]
   }
  ],
