--- a/11_NCWF.ipynb
+++ b/11_NCWF.ipynb
@@ -441,9 +441,11 @@
     "        wx_holder[idx] = wx_holder[idx] + wx_bundle[i]\n",
     "        \n",
     "        unique_FL = pd.unique(alt_holder[idx])\n",
+    "        \n",
     "        alts_idx = []\n",
     "        for ele in unique_FL:\n",
     "            alts_idx.append(np.where(alt_holder[idx] == ele)[0])\n",
+    "        alt_holder[idx] = unique_FL\n",
     "        \n",
     "        tmp_polys = []\n",
     "        for ele in alts_idx:\n",
